--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shark-attax",
   "version": "0.1.0",
+  "homepage": "https://safetorpedo.github.io/shark-hacks-4",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
